# advent-of-code

./: .gitignore  Cargo.toml  flake.nix  pyproject.toml  requirements.in  requirements.txt  starter.py
2022/day11/: day11.ipynb
2022/day12/: day12.ipynb
2022/day13/: day13.ipynb
2022/day14/: day14.ipynb
2022/day15/: day15.ipynb
2022/day16/: day16.ipynb
2022/day9/: day9.ipynb
2023/: Cargo.toml
2023/day1/: d1.ipynb
2023/day14/: d14.ipynb
2023/day4/: d4.ipynb
2023/day5/: d5.ipynb
2023/day6/: d6.ipynb
2023/day7/: d7.ipynb
2023/day9/: d9.ipynb
2024/day1/: day1.ipynb
2024/day10/: day10.py
2024/day11/: day11-stack.py  day11.py
2024/day12/: day12.py
2024/day13/: day13.py
2024/day14/: day14.py
2024/day15/: day15.py  day15p2.py
2024/day16/: day16.py
2024/day17/: day17.py
2024/day18/: day18.py
2024/day19/: day19.py
2024/day2/: day2.ipynb
2024/day20/: day20.py
2024/day21/: day21-2.py  day21.py
2024/day22/: day22.py
2024/day23/: day23.py
2024/day24/: day24.py
2024/day25/: day25.py
2024/day3/: day3.ipynb
2024/day4/: day4.ipynb
2024/day5/: day5.ipynb
2024/day6/: day6.ipynb  day6.py
2024/day7/: day6.ipynb  day7.ipynb
2024/day8/: day8.py
2024/day9/: day9.py
2025/day1/: day1.py
2025/day10/: day10.py
2025/day11/: day11.py
2025/day2/: day2.py
2025/day3/: day3.py
2025/day4/: day4.py
2025/day5/: day5.py
2025/day6/: day6.py
2025/day7/: day7.py
2025/day8/: day8.py
day1/: d1.ipynb
day10/: d10.ipynb
day2/: d2.ipynb
day3/: d3.ipynb
day5/: d5.ipynb
day7/: d6.ipynb
day8/: d8.ipynb
(+32 files in other folders)
