[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "day4/day4-rust",
    "day7/day7-rust",
    "day9/day9-rust",
    "day11-galaxies/day11-rust",
    "day12-hot-springs/day12-rust",
    "day13-mirrors/day13-rust",
    "day15-lens-library/day15-rust",
    "day16-light-maze/day16-rust",
]

[dependencies]
